--- a/Nominas/Nominas.csproj
+++ b/Nominas/Nominas.csproj
@@ -31,8 +31,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Nominas.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,16 +49,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmEmpresas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEmpresas.Designer.cs">
+      <DependentUpon>frmEmpresas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmLogIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLogIn.Designer.cs">
+      <DependentUpon>frmLogIn.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSeleccionarEmpresa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSeleccionarEmpresa.Designer.cs">
+      <DependentUpon>frmSeleccionarEmpresa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GlobalVar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmEmpresas.resx">
+      <DependentUpon>frmEmpresas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLogIn.resx">
+      <DependentUpon>frmLogIn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSeleccionarEmpresa.resx">
+      <DependentUpon>frmSeleccionarEmpresa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,6 +109,28 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Autorizaciones.Core\Autorizaciones.Core.csproj">
+      <Project>{85e3a89d-2eb1-40b4-ba25-0e9600ec15a0}</Project>
+      <Name>Autorizaciones.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Data.Obj\Data.Obj.csproj">
+      <Project>{2f926e34-44b7-49dc-b955-9b33f8b55c96}</Project>
+      <Name>Data.Obj</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Direccion.Core\Direccion.Core.csproj">
+      <Project>{edd3a402-8d97-4357-8e5c-acfab60ecd27}</Project>
+      <Name>Direccion.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Empresas.Core\Empresas.Core.csproj">
+      <Project>{9ddf6a04-39b7-458a-9f15-123f2b27c303}</Project>
+      <Name>Empresas.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Usuarios.Core\Usuarios.Core.csproj">
+      <Project>{eaaf5c8a-7616-431b-8875-cd0bc4300e2d}</Project>
+      <Name>Usuarios.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
