--- a/Nominas/Nominas.csproj
+++ b/Nominas/Nominas.csproj
@@ -55,6 +55,12 @@
     <Compile Include="frmEmpresas.Designer.cs">
       <DependentUpon>frmEmpresas.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmListaEmpresas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListaEmpresas.Designer.cs">
+      <DependentUpon>frmListaEmpresas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogIn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmEmpresas.resx">
       <DependentUpon>frmEmpresas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListaEmpresas.resx">
+      <DependentUpon>frmListaEmpresas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogIn.resx">
       <DependentUpon>frmLogIn.cs</DependentUpon>
