Formulario de Imagenes

--- a/Nominas/Nominas.csproj
+++ b/Nominas/Nominas.csproj
@@ -67,6 +67,12 @@
     <Compile Include="frmClientes.Designer.cs">
       <DependentUpon>frmClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmComplementos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmComplementos.Designer.cs">
+      <DependentUpon>frmComplementos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDepartamentos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +103,12 @@
     <Compile Include="frmListaClientes.Designer.cs">
       <DependentUpon>frmListaClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmListaComplementos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListaComplementos.Designer.cs">
+      <DependentUpon>frmListaComplementos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmListaDepartamentos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +132,12 @@
     </Compile>
     <Compile Include="frmListaFactores.Designer.cs">
       <DependentUpon>frmListaFactores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmListaImagenes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListaImagenes.Designer.cs">
+      <DependentUpon>frmListaImagenes.cs</DependentUpon>
     </Compile>
     <Compile Include="frmListaPerfiles.cs">
       <SubType>Form</SubType>
@@ -226,6 +244,9 @@
     <EmbeddedResource Include="frmClientes.resx">
       <DependentUpon>frmClientes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmComplementos.resx">
+      <DependentUpon>frmComplementos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDepartamentos.resx">
       <DependentUpon>frmDepartamentos.cs</DependentUpon>
     </EmbeddedResource>
@@ -241,6 +262,9 @@
     <EmbeddedResource Include="frmListaClientes.resx">
       <DependentUpon>frmListaClientes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmListaComplementos.resx">
+      <DependentUpon>frmListaComplementos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmListaDepartamentos.resx">
       <DependentUpon>frmListaDepartamentos.cs</DependentUpon>
     </EmbeddedResource>
@@ -252,6 +276,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmListaFactores.resx">
       <DependentUpon>frmListaFactores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListaImagenes.resx">
+      <DependentUpon>frmListaImagenes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmListaPerfiles.resx">
       <DependentUpon>frmListaPerfiles.cs</DependentUpon>
@@ -336,6 +363,10 @@
       <Project>{05b3d13b-5118-469d-bcb7-61c4f6a0e949}</Project>
       <Name>Clientes.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Complementos.Core\Complementos.Core.csproj">
+      <Project>{4363c955-dbe1-49dd-a5c9-d4d13fb3ba21}</Project>
+      <Name>Complementos.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Data.Obj\Data.Obj.csproj">
       <Project>{2f926e34-44b7-49dc-b955-9b33f8b55c96}</Project>
       <Name>Data.Obj</Name>
@@ -359,6 +390,14 @@
     <ProjectReference Include="..\Factores.Core\Factores.Core.csproj">
       <Project>{4975efe5-7f1e-4648-89c1-ff4b4fcafd7a}</Project>
       <Name>Factores.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Imagen.Core\Imagen.Core.csproj">
+      <Project>{38c53406-8cfb-4bd5-a58e-c6bc19da2524}</Project>
+      <Name>Imagen.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LayoutMovimientos.Core\LayoutMovimientos.Core.csproj">
+      <Project>{213f2f4a-01c5-47da-ad29-5c45f17b91e4}</Project>
+      <Name>LayoutMovimientos.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\Perfil.Core\Perfil.Core.csproj">
       <Project>{f45c48b3-fd8c-4b67-9d87-10e3971c1dbd}</Project>
